# mcp-kvm

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package.json  pyproject.toml
docs/: quickstart.md
src/mcp_kvm/: __init__.py  __main__.py  cli.py  config.py  server.py
src/mcp_kvm/adapters/: __init__.py  base.py  blikvm.py  pikvm.py  software.py
tests/: test_adapters.py  test_mcp_server.py
